Fix invisible avatar

--- a/frontend-react-js/src/components/ProfileHeading.css
+++ b/frontend-react-js/src/components/ProfileHeading.css
@@ -1,11 +1,10 @@
 .profile_heading {
   padding-bottom: 0px;
 }
-
-.profile_heading .avatar img {
-  left: 16px;
-  bottom:-74px;
+.profile_heading .profile-avatar {
   position: absolute;
+  bottom:-74px;
+  left: 16px;
   width: 148px;
   height: 148px;
   border-radius: 999px;
@@ -15,7 +14,6 @@
 .profile_heading .banner {
   position: relative;
   height: 200px;
-  border-radius: 20px;
 }
 
 .profile_heading .info {
